# ProFantasyAI

./: .gitignore  LICENSE  MPFC_v1.txt  README.md  docker-compose.yml  netlify.toml  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  algorithm.py  config.py  engine.py  fantasy_pl.py  fpl_api.py  main.py  routes.py  team_builder.py  utils.py
backend/app/api/: routes.py
backend/app/core/: constants.py
backend/app/models/: schemas.py
backend/app/services/: fpl_client.py  optimizer.py  projection.py
backend/tests/: conftest.py  test_api.py  test_fpl_client.py  test_optimizer.py  test_projection.py
docs/: DEPLOYMENT.md  ProFantasy_v1.txt
docs/screenshots/: README.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.js  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Bench.tsx  ErrorState.tsx  Header.tsx  Loader.tsx  Pitch.tsx  PlayerDetail.tsx  PlayerToken.tsx  PositionLegend.tsx  SeasonTabs.tsx  SquadBuilderBanner.tsx  StatCard.tsx  StatsSummary.tsx  TeamCrest.tsx  TeamTracker.tsx  ValueLeaders.tsx  icons.tsx  playerDetailContext.ts
frontend/src/components/__tests__/: PlayerToken.test.tsx  SquadBuilderBanner.test.tsx  StatsSummary.test.tsx  TeamCrest.test.tsx  TeamTracker.test.tsx
frontend/src/hooks/: useFplData.ts
frontend/src/lib/: format.ts
frontend/src/types/: index.ts
